# logprobe

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
demo/: README.md  gemini_sample.json  generate_logprobs.py  gpt2_logits_openai.json  gpt2_openai.json  gpt2_stream.jsonl  gpt2_vllm.json  gpt41_nano.json  gpt4o_mini_code.json  gpt4o_mini_creative.json  gpt4o_mini_natural.json  ollama_sample.json  verify_fixtures.py
research/: README.md
research/data/: confidence_gradient.json  domain_code.json  domain_creative.json  domain_factual.json  domain_reasoning.json  hallucination_biography.json  hallucination_factoid.json  lang_french.json  lang_japanese.json  model_gpt41mini.json  model_gpt41nano.json  model_gpt4o.json  temp_0.0.json  temp_0.5.json  temp_1.0.json  temp_1.5.json  topk_20.json  topk_5.json
src/: cli.rs  diagnostics.rs  filters.rs  lib.rs  main.rs  math.rs  metrics.rs  output.rs  parse.rs  types.rs
tests/: cli.rs  smoke.rs
tests/fixtures/: openai_sample.json  stream.jsonl  vllm_sample.json
